Bug 350749 - 15.08 beta doesn't build against Qt4
Summary: 15.08 beta doesn't build against Qt4
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dennis Nienhüser
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-29 14:11 UTC by Antonio Rojas
Modified: 2015-07-30 07:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2015-07-29 14:11:53 UTC
In file included from /build/libmarble4/src/marble-15.07.80/src/lib/marble/layers/PopupLayer.cpp:18:0:
/build/libmarble4/src/marble-15.07.80/src/lib/marble/PopupItem.h:23:35: fatal error: ui_NullWebPopupWidget.h: No such file or directory
compilation terminated.
src/lib/marble/CMakeFiles/marblewidget.dir/build.make:9976: recipe for target 'src/lib/marble/CMakeFiles/marblewidget.dir/layers/PopupLayer.cpp.o' failed
make[2]: *** [src/lib/marble/CMakeFiles/marblewidget.dir/layers/PopupLayer.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
CMakeFiles/Makefile2:1065: recipe for target 'src/lib/marble/CMakeFiles/marblewidget.dir/all' failed
make[1]: *** [src/lib/marble/CMakeFiles/marblewidget.dir/all] Error 2
Makefile:160: recipe for target 'all' failed
make: *** [all] Error 2


Reproducible: Always
Comment 1 Dennis Nienhüser 2015-07-29 18:22:04 UTC
I just tested it with Qt 4.8.2 without a problem. From the compile output above it seems you're running it without webkit. Is webkit not installed or did you disable it explicitly with a cmake option?
Comment 2 Antonio Rojas 2015-07-29 18:25:08 UTC
I have qtwebkit from the qtwebkit-23 repo, not the one bundled with Qt
Comment 3 Antonio Rojas 2015-07-29 18:37:23 UTC
*** Bug 350762 has been marked as a duplicate of this bug. ***
Comment 4 Dennis Nienhüser 2015-07-29 20:11:03 UTC
Ok, I can reproduce it now with plain webkit, affects also the master branch.
Comment 5 Dennis Nienhüser 2015-07-29 20:49:00 UTC
The problem seems to be that qt4/Qt/qconfig.h sets QT_NO_WEBKIT without any checks. Can you give the patch at https://git.reviewboard.kde.org/r/124526/ a try? Thanks.
Comment 6 Antonio Rojas 2015-07-29 21:09:15 UTC
patch works, thanks
Comment 7 Dennis Nienhüser 2015-07-30 07:06:06 UTC
Git commit 62797313aa22b846a03ae19324f4b29845fe7568 by Dennis Nienhüser.
Committed on 30/07/2015 at 06:54.
Pushed by nienhueser into branch 'Applications/15.08'.

Change QT_NO_WEBKIT to MARBLE_NO_WEBKIT

Fixes compilation with Qt 4. MARBLE_NO_WEBKIT is set if webkit is not
found by cmake.

REVIEW: 124526
(cherry picked from commit c67ebec4d8f50a03998e40cc0aacaa881d5625af)

M  +7    -0    CMakeLists.txt
M  +2    -0    src/apps/marble-mobile/MobileMainWindow.cpp
M  +5    -5    src/lib/marble/CMakeLists.txt
M  +1    -1    src/lib/marble/LegendWidget.cpp
M  +6    -6    src/lib/marble/MarbleLegendBrowser.cpp
M  +1    -1    src/lib/marble/MarbleLegendBrowser.h
M  +9    -9    src/lib/marble/PopupItem.cpp
M  +1    -1    src/lib/marble/PopupItem.h
M  +1    -1    src/lib/marble/cloudsync/RouteItemDelegate.cpp
M  +1    -1    src/lib/marble/routing/RoutingInputWidget.cpp
M  +1    -1    src/plugins/render/CMakeLists.txt

http://commits.kde.org/marble/62797313aa22b846a03ae19324f4b29845fe7568