Change QT_NO_WEBKIT to MARBLE_NO_WEBKIT

Fixes compilation with Qt 4. MARBLE_NO_WEBKIT is set if webkit is not
found by cmake.

REVIEW: 124526
BUG: 350749
(cherry picked from commit c67ebec4d8f50a03998e40cc0aacaa881d5625af)